--- a/css/checkout/check_mobile.css
+++ b/css/checkout/check_mobile.css
@@ -12,18 +12,17 @@ body{
 /*NavBar*/
 .upper-section{
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     width: 100%;
-    height: 200px;
+    height: 400px;
     padding: 50px 0;
     /* background-color: aqua; */
 }
-.upper-section form{
-    margin-left: -50px;
-}
+
 .upper-section form input{
-    width: 300px;
-    height: 30px;
+    width: 80%;
+    height: 20px;
     border-radius: 30px;
     padding: 20px 60px;
     color: #ccc;
@@ -35,8 +34,8 @@ body{
 }
 
 .upper-section .glass{
-    margin-left: -280px;
-    color: #ccc;
+    margin-left: -50px;
+    color:#ccc;
 }
 .upper-section h2{
     /* background-color: red; */
@@ -44,33 +43,38 @@ body{
     text-transform: capitalize;
     text-align: center;
     font-weight: 300;
-    font-size: 1.2rem;
+    font-size: 1rem;
     border: 5px solid;
-    height: 110px;
+    height: 90px;
     padding: 10px 10px;
 }
 .upper-section .icons{
-    margin-right: -100px;
+    /* margin-right: -100px; */
     /* background-color: aqua; */
     position: relative;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 .icons::after{
     content: "";
     text-align: center;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
     color: #fff;
     background-color: blueviolet;
     position: absolute;
-    right: 0px;
+    right: 13%;
     top: -10px;
 }
 .icon{
     display: inline-block;
     color: #666565;
+    font-size: 15px;
     padding: 10px 10px;
     cursor: pointer;
+    transition: 0.5s all;
 }
 .icon:hover{
     color: #000;
@@ -79,17 +83,18 @@ body{
 .icons span{
     color: #fff;
     position: absolute;
-    top:-8px;
-    right: 7px;
+    top:-9px;
+    right: 13.8%;
     z-index: 1;
     font-size: 0.7rem;
 }
 nav{
-    width: 50%;
+    width: 100%;
     margin: 30px auto;
     display: flex;
     justify-content: space-around;
     text-decoration: none;
+    /* background-color: yellowgreen; */
 }
 .link-home{
     text-decoration: none;
@@ -153,34 +158,36 @@ nav{
     text-decoration: none;
     color: purple;
 }
+.sec{
+    display: flex;
+    flex-direction: column;
+}
 .cccc{
     display: flex;
 }
-.Coupon{
-    margin-left: 350px;
-    margin-top: 75px;
-    font-size:50px ;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold; 
-}
+
 .bill{
     font-size: 30px;
     font-weight: bold;
     margin-top: 75px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 220px;
+    margin-left: 00px;
     
 }
 .bbb{
     display: flex;
-    justify-content: center;
+    justify-content: start;
+    flex-direction: column;
+    height: 2200px;
+    margin-top: 0;
+    /* background-color: yellowgreen; */
 }
 .border{
     border: 2px solid rgb(219, 216, 216);
-    width: 500px;
-    height: 1050px;
-    margin-top: 10px;
-    margin-left: 60px;
+    width: 100%;
+    /* height: 1050px; */
+    margin-top: 00px;
+    margin-left: 0px;
 }
 .coun{
     margin-top: 30px;
@@ -303,26 +310,24 @@ nav{
     margin-top: 10px;
     width: 430px;
 }
-.Coupon{
-    margin-left:0px;
-    margin-top: -50px;
-    font-size:30px ;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold; 
-    /* display: inline; */
-    /* background-color: yellowgreen; */
-}
 .border2{
-    margin-left: 50px;
-    margin-top: 10px;
-    height: 260px;
-    width: 600px;
+    margin-left: 0px;
+    margin-top: 100px;
+    height: 160px;
+    width: 100%;
     border: 2px solid;
     border: 2px solid rgb(219, 216, 216);
 }
+.Coupon{
+    margin-left: 0px;
+    margin-top: -75px;
+    font-size:30px ;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold; 
+}
 .hhh{
     margin-left: 45px;
-    margin-top: 100px;
+    margin-top: 80px;
 }
 .couppp{
     margin-left: 45px;
@@ -363,11 +368,12 @@ nav{
     border: 2px solid rgb(219, 217, 217);
     margin-top: 0px;
     height:700px;
+    width: 100%;
     /* background-color: yellowgreen; */
 }
 .pro{
     margin-top: 40px;
-    margin-left: 50px;
+    margin-left: 00px;
     display: flex;
 }
 .productt{
@@ -380,9 +386,9 @@ nav{
     font-weight: bold;
 }
 .hr{
-    width: 500px;
+    width: 100%;
     margin-top: 10px;
-    margin-left: 35px;
+    margin-left: 0px;
 }
 .topup{
     display: flex;
@@ -392,7 +398,7 @@ nav{
 }
 .toppp{
     margin-top: 15px;
-    margin-left: 50px;
+    margin-left: 0px;
 }
 .pricee{
     margin-top: 15px;
@@ -407,7 +413,7 @@ nav{
 }
 .toppp2{
     margin-top: 15px;
-    margin-left: 50px;
+    margin-left: 0px;
     font-weight: bold;
 }
 .pricc{
@@ -424,9 +430,9 @@ nav{
 }
 .direct{
     margin-top: 70px;
-    margin-left: 35px;
+    margin-left: 0px;
     border: 2px solid  rgb(182, 178, 178);;
-    width: 500px;
+    width: 100% ;
     padding: 12px;
 }
 .dir{
@@ -435,9 +441,9 @@ nav{
 }
 .cheq{
     margin-top: 20px;
-    margin-left: 35px;
+    margin-left: 0px;
     border: 2px solid  rgb(182, 178, 178);;
-    width: 500px;
+    width: 100%;
     padding: 12px;
 }
 .pay{
@@ -446,9 +452,9 @@ nav{
 }
 .pal{
     margin-top: 20px;
-    margin-left: 35px;
+    margin-left: 0px;
     border: 2px solid  rgb(182, 178, 178);;
-    width: 500px;
+    width: 100%;
     padding: 12px;
 }
 .ppal{
@@ -493,9 +499,10 @@ footer .cols{
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
     line-height: 50px;
     margin-top: 50px;
-    /* background-color: red; */
 }
 .cols img{
     width: 350px;
@@ -514,6 +521,7 @@ footer .cols{
 .cols h1{
     font-weight: 500;
     letter-spacing: -2px;
+    font-size: 1.5rem;
 }
 .cols div div{
     height: 4rem;
@@ -521,7 +529,7 @@ footer .cols{
 }
 .cols button{
     width: 5rem;
-    height: 4rem;
+    height: 3rem;
     background-color: rgba(86, 20, 148, 0.906);
     color: #fff;
     border: none;
@@ -543,11 +551,11 @@ footer .cols{
 }
 
 .cols input{
-    width: 12rem;
-    height: 4rem;
+    width: 8rem;
+    height: 3rem;
     padding: 10px;
     border: 1px solid #ccc;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: #000;
 }
 .cols input:focus{
@@ -558,6 +566,7 @@ footer span{
     font-size: 1.3rem;
 }
 .copyright{
-    margin: 200px 0;
+    margin: 50px 0;
     color: #666565;
+    font-size: 1.1rem;
 }
