--- a/css/homepage/home_page_mobile.css
+++ b/css/homepage/home_page_mobile.css
@@ -47,7 +47,8 @@ body{
     font-size: 1rem;
     border: 5px solid;
     height: 90px;
-    padding: 10px 10px;
+    width: 100%;
+    padding: 10px 0px;
 }
 .upper-section .icons{
     /* margin-right: -100px; */
@@ -100,7 +101,7 @@ nav{
 .link-home{
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 0.8rem ;
+    font-size: 0.7rem ;
     font-weight: 500;
     color: blueviolet;
 }
@@ -110,7 +111,7 @@ nav{
 .links{
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 0.8rem ;
+    font-size: 0.5rem ;
     font-weight: 500;
     color:#666565;
 }
@@ -425,7 +426,7 @@ footer .cols{
     margin-top: 50px;
 }
 .cols img{
-    width: 350px;
+    width: 250px;
     height: 200px;
 }
 .cols i{
