--- a/css/shop/mobile_width_shop.css
+++ b/css/shop/mobile_width_shop.css
@@ -99,7 +99,7 @@ nav{
 .link-home{
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 0.8rem ;
+    font-size: 0.6rem ;
     font-weight: 500;
     color: blueviolet;
 }
@@ -109,7 +109,7 @@ nav{
 .links{
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 0.8rem ;
+    font-size: 0.6rem ;
     font-weight: 500;
     color:#666565;
 }
@@ -297,9 +297,11 @@ article{
 }
 article .list{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     text-align: center;
     position: absolute;
+    align-items: center;
     /* background-color: #000; */
     width: 100%;
     z-index: 1;
@@ -307,7 +309,7 @@ article .list{
 .right{
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    width: 70%;
     /* background-color: yellow; */
 }
 .buttons{
@@ -364,14 +366,15 @@ article .list{
 .products{
     margin-top: 100px;
     display: flex;
+    flex-direction: column;
     justify-content:space-between ;
     text-align: center;
     width: 100%;
-    margin: 50px auto;
+    margin: 60px auto;
     
 }
 .products div{
-    width: 30%;
+    width: 100%;
     height: 26rem;
     border: 1px solid  #ccc;
     border-radius: 3px;
@@ -389,9 +392,9 @@ article .list{
     color: blueviolet;
 }
 .circles{
-    width: 80%;
+    width: 100%;
     height: 200px;
-    margin: 50px 20px;
+    margin: 50px 0px;
     text-align: center;
     /* background-color: #666565; */
 }
@@ -494,7 +497,7 @@ footer .cols{
     margin-top: 50px;
 }
 .cols img{
-    width: 350px;
+    width: 250px;
     height: 200px;
 }
 .cols i{
