--- a/css/shop/mobile_width_shop.css
+++ b/css/shop/mobile_width_shop.css
@@ -379,6 +379,7 @@ article .list{
     border: 1px solid  #ccc;
     border-radius: 3px;
     line-height: 40px;
+    margin: 60px 0;
     background-color: #fff;
     
 }
