--- a/css/single pro/single_mobile.css
+++ b/css/single pro/single_mobile.css
@@ -37,6 +37,11 @@ body{
     margin-left: -50px;
     color:#ccc;
 }
+.upper-section div{
+    width: 100%;
+    /* background-color: yellowgreen; */
+    margin-left: 0px !important;
+}
 .upper-section h2{
     /* background-color: red; */
     color: rgb(86, 86, 86);
@@ -47,6 +52,7 @@ body{
     border: 5px solid;
     height: 90px;
     padding: 10px 10px;
+    margin-left: 0 !important;
 }
 .upper-section .icons{
     /* margin-right: -100px; */
