--- a/css/cart/mobile_cart.css
+++ b/css/cart/mobile_cart.css
@@ -171,13 +171,15 @@ td, th{
     border-radius: 8px;
     cursor: pointer;
 }
-
+.img{
+    width: 50px;
+}
 .all{
     display: flex;
     align-items: center;
     justify-content: center;
     /* background-color: white; */
-    height: 30px;
+    height: 50px;
     width: 100%;
     /* background-color: #666565; */
 }
@@ -201,7 +203,7 @@ td, th{
     font-size: 1.5rem;
     font-weight: 400;
     cursor: pointer;
-    margin: 7px 0;
+    /* margin: 2px 0; */
     
 }
 .minus{
